--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-anyio==3.6.2
 bcrypt==4.0.1
+fastapi==0.95.1
+pydantic==1.10.7
+SQLAlchemy==2.0.13
+uuid==1.30
+anyio==3.6.2
 certifi==2023.5.7
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
+cryptography==41.0.1
 dnspython==2.3.0
+ecdsa==0.18.0
 email-validator==2.0.0.post2
-fastapi==0.95.1
+fastapi-jwt-auth==0.5.0
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.0
@@ -17,16 +24,11 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 orjson==3.8.12
 psycopg2==2.9.6
-pydantic==1.10.7
-python-dotenv==1.0.0
-python-multipart==0.0.6
-PyYAML==6.0
+six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.13
 starlette==0.26.1
 typing_extensions==4.5.0
 ujson==5.7.0
-uuid==1.30
 uvicorn==0.22.0
 watchfiles==0.19.0
 websockets==11.0.3
